<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BudgetManager</string>
    <string name="action_settings">Settings</string>
    <string name="calculate">Calculate</string>
    <string name="budget_value">Budget amount</string>
    <string name="from">From: </string>
    <string name="to">To: </string>
    <string name="ok">OK</string>
    <string name="message_no_income_entered">Please enter an amount for the budget</string>
    <string name="message_dates_not_valid">The final date must be after the initial date</string>
    <string name="budget_per_day">You have &#36;%1$.2f per day</string>
    <string name="new_expense">New Expense</string>
    <string name="expense_name">Name</string>
    <string name="expense_price">Price</string>
    <string name="price">&#36;%1$.2f</string>
    <string name="new_expense_dialog_title">New expense</string>
    <string name="budget_details">Budget Details</string>
    <string name="budget_amount">Amount: &#36;%1$.2f</string>
    <string name="edit">edit</string>
    <string name="from_date">From %s</string>
    <string name="to_date">To %s</string>

</resources>
